--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,11 @@
-/* styles go here */
+.fieldset__opt {
+  margin-bottom: 20px;
+}
+
+.form__input {
+  margin-bottom: 10px;
+}
+
+.form__input:last-child {
+  margin-bottom: 0;
+}
