--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,6 @@
   margin-bottom: 20px;
 }
 
-.form__input {
+.form__input:not(:last-child) {
   margin-bottom: 10px;
-}
-
-.form__input:last-child {
-  margin-bottom: 0;
 }
